Enhance HTTPS certificate handling and update dependencies
- Added interactive HTTPS certificate trust management to handle untrusted certificates, including details display and import functionality.
- Updated logback version to 1.2.13 in pom.xml.
- Improved Java command resolution in run-with-jre.bat to prioritize user-configured Java.
- Removed outdated JNA version warning from WindowsAuthTester.
- Added unit tests for affirmative response validation in WindowsAuthClient.
- Introduced a new agent markdown file for Windows Authentication Tester expertise guidance.